project(CCIA)
cmake_minimum_required (VERSION 3.5)
add_compile_options(
  -std=c++17#-std=gnu++17#-std=c++17
  -pthread 
  -g  -ggdb -O0 -Wall   -fstack-protector-all  -fnon-call-exceptions) #-march=native
set(CXX_FLAGS "-Wall")
set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")

# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_CXX_EXTENSIONS OFF)

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
include_directories(/usr/local/include)
include_directories(/usr/local/opt/openssl/include)
link_directories(/usr/local/lib)
link_directories(/usr/local/opt/openssl/lib)
link_directories(/usr/local/Cellar/libuv/1*/lib)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 


# find_package (Eigen3 REQUIRED)

# find_package(Boost REQUIRED COMPONENTS filesystem program_options serialization system thread)
# include_directories(${Boost_INCLUDE_DIRS})

FIND_PACKAGE(Threads)


add_executable(listing_1.1 listings/listing_1.1.cpp)
target_link_libraries (listing_1.1 ${CMAKE_THREAD_LIBS_INIT} )

# add_executable(listing_2.1 listings/listing_2.1.cpp)
# target_link_libraries (listing_2.1 ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_2.2 listings/listing_2.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_2.3 listings/listing_2.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_2.4 listings/listing_2.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
add_executable(listing_2.5 listings/listing_2.5.cpp)
target_link_libraries (listing_2.5 ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_2.6 listings/listing_2.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_2.7 listings/listing_2.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_2.8 listings/listing_2.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )

# add_executable(listing_3.1 listings/listing_3.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.2 listings/listing_3.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.3 listings/listing_3.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.4 listings/listing_3.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.5 listings/listing_3.5.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.6 listings/listing_3.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.7 listings/listing_3.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.8 listings/listing_3.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.9 listings/listing_3.9.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.10 listings/listing_3.10.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.11 listings/listing_3.11.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_3.12 listings/listing_3.12.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
add_executable(listing_3.13 listings/listing_3.13.cpp)
target_link_libraries (listing_3.13 ${CMAKE_THREAD_LIBS_INIT} )

# add_executable(listing_4.1 listings/listing_4.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.2 listings/listing_4.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.3 listings/listing_4.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.4 listings/listing_4.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.5 listings/listing_4.5.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.6 listings/listing_4.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.7 listings/listing_4.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.8 listings/listing_4.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.9 listings/listing_4.9.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.10 listings/listing_4.10.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.11 listings/listing_4.11.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.12 listings/listing_4.12.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.13 listings/listing_4.13.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.14 listings/listing_4.14.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.15 listings/listing_4.15.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.16 listings/listing_4.16.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.17 listings/listing_4.17.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.18 listings/listing_4.18.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.19 listings/listing_4.19.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.20 listings/listing_4.20.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.21 listings/listing_4.21.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.22 listings/listing_4.22.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.23 listings/listing_4.23.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.24 listings/listing_4.24.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.25 listings/listing_4.25.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.26 listings/listing_4.26.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_4.27 listings/listing_4.27.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )


# add_executable(listing_5.1 listings/listing_5.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.2 listings/listing_5.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.3 listings/listing_5.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.4 listings/listing_5.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.5 listings/listing_5.5.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.6 listings/listing_5.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.7 listings/listing_5.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.8 listings/listing_5.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.9 listings/listing_5.9.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.10 listings/listing_5.10.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.11 listings/listing_5.11.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.12 listings/listing_5.12.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_5.13 listings/listing_5.13.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )


# add_executable(listing_6.1 listings/listing_6.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.2 listings/listing_6.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.3 listings/listing_6.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.4 listings/listing_6.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.5 listings/listing_6.5.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.6 listings/listing_6.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.7 listings/listing_6.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.8 listings/listing_6.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.9 listings/listing_6.9.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.10 listings/listing_6.10.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.11 listings/listing_6.11.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.12 listings/listing_6.12.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_6.13 listings/listing_6.13.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )

# add_executable(listing_7.1. listings/listing_7.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.2. listings/listing_7.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.3. listings/listing_7.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.4. listings/listing_7.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.5. listings/listing_7.5.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.6. listings/listing_7.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.7. listings/listing_7.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.8. listings/listing_7.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.9. listings/listing_7.9.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.10 listings/listing_7.10.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.11 listings/listing_7.11.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.12 listings/listing_7.12.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.13 listings/listing_7.13.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.14 listings/listing_7.14.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.15 listings/listing_7.15.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.16 listings/listing_7.16.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.17 listings/listing_7.17.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.18 listings/listing_7.18.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.19 listings/listing_7.19.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.20 listings/listing_7.20.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.21 listings/listing_7.21.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_7.22 listings/listing_7.22.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )


# add_executable(listing_8.1. listings/listing_8.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.2. listings/listing_8.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.3. listings/listing_8.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.4. listings/listing_8.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.5. listings/listing_8.5.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.6. listings/listing_8.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.7. listings/listing_8.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.8. listings/listing_8.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.9. listings/listing_8.9.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.10 listings/listing_8.10.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.11 listings/listing_8.11.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.12 listings/listing_8.12.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_8.13 listings/listing_8.13.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )


# add_executable(listing_9.1. listings/listing_9.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.2. listings/listing_9.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.3. listings/listing_9.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.4. listings/listing_9.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.5. listings/listing_9.5.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.6. listings/listing_9.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.7. listings/listing_9.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.8. listings/listing_9.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.9. listings/listing_9.9.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.10 listings/listing_9.10.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.11 listings/listing_9.11.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.12 listings/listing_9.12.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_9.13 listings/listing_9.13.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )

# add_executable(listing_10.1 listings/listing_10.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_10.2 listings/listing_10.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_10.3 listings/listing_10.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_11.1 listings/listing_11.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_a.1. listings/listing_a.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_a.2. listings/listing_a.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_a.3. listings/listing_a.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_a.4. listings/listing_a.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.10 listings/listing_c.10.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.1. listings/listing_c.1.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.2. listings/listing_c.2.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.3. listings/listing_c.3.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.4. listings/listing_c.4.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.5. listings/listing_c.5.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.6. listings/listing_c.6.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.7. listings/listing_c.7.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.8. listings/listing_c.8.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
# add_executable(listing_c.9. listings/listing_c.9.cpp)
# target_link_libraries (listing_ ${CMAKE_THREAD_LIBS_INIT} )
